@@ -117,6 +117,8 @@ Version 7.1  [ TODO ]
             - New routine scaleDown().
             - New routine isNormalEdgeLink().
             - New routine removeOcts().
+            - Routine cutAlong() can now work with almost normal surfaces
+              (i.e., it can now handle octagons).
         Class Perm<n>:
             - New routines for tight encodings and decodings.
         Type safe_tuple_element<...>:
